syntax = "proto3";

package main;

option go_package = "./proto";

// 添加会员关注品牌
message AddMemberBrandAttentionReq {
  int64 id = 1; //
  int64 member_id = 2; //会员id
  int64 brand_id = 5; //品牌id
  string brand_name = 6; //品牌名称
  string brand_logo = 7; //品牌Logo
  string brand_city = 8; //品牌所在城市
}

message AddMemberBrandAttentionResp {
  string pong = 1;
}

// 删除会员关注品牌
message DeleteMemberBrandAttentionReq {
  repeated int64 ids = 1;
  int64 MemberId = 2; //会员id
}

message DeleteMemberBrandAttentionResp {
  string pong = 1;
}

// 查询会员关注品牌详情
message QueryMemberBrandAttentionDetailReq {
    int64 id = 1;
}

message QueryMemberBrandAttentionDetailResp {
  int64 id = 1; //
  int64 member_id = 2; //会员id
  string member_nick_name = 3; //会员姓名
  string member_icon = 4; //会员头像
  int64 brand_id = 5; //品牌id
  string brand_name = 6; //品牌名称
  string brand_logo = 7; //品牌Logo
  string brand_city = 8; //品牌所在城市
  string create_time = 9; //关注时间

}

// 分页查询会员关注品牌列表
message QueryMemberBrandAttentionListReq {
  int64 member_id = 1; //会员id
  
}

message MemberBrandAttentionListData {
  int64 id = 1; //
  int64 member_id = 2; //会员id
  string member_nick_name = 3; //会员姓名
  string member_icon = 4; //会员头像
  int64 brand_id = 5; //品牌id
  string brand_name = 6; //品牌名称
  string brand_logo = 7; //品牌Logo
  string brand_city = 8; //品牌所在城市
  string create_time = 9; //关注时间

}

message QueryMemberBrandAttentionListResp {
  int64 total = 1;
  repeated  MemberBrandAttentionListData list = 2;
}

// 会员关注品牌
service MemberBrandAttentionService {
  // 添加会员关注品牌
  rpc AddMemberBrandAttention(AddMemberBrandAttentionReq) returns (AddMemberBrandAttentionResp){}
  // 取消品牌关注/清空当前用户品牌关注列表
  rpc DeleteMemberBrandAttention(DeleteMemberBrandAttentionReq) returns (DeleteMemberBrandAttentionResp){}
  // 查询会员关注品牌详情
   rpc QueryMemberBrandAttentionDetail(QueryMemberBrandAttentionDetailReq) returns (QueryMemberBrandAttentionDetailResp){}
  // 查询会员关注品牌列表
  rpc QueryMemberBrandAttentionList(QueryMemberBrandAttentionListReq) returns (QueryMemberBrandAttentionListResp){}


}
