syntax = "proto3";

package main;

option go_package = "./proto";


// 删除会员登录记录
message DeleteMemberLoginLogReq {
  repeated int64 ids = 1;
  int64 member_id = 2; //会员id
}

message DeleteMemberLoginLogResp {
  string pong = 1;
}



// 分页查询会员登录记录列表
message QueryMemberLoginLogListReq {
  int64 page_num = 1; //第几页
  int64 page_size = 2; //每页的数量
  int32 login_type = 3; //登录类型：0->PC；1->android;2->ios;3->小程序
  int64 member_id = 4; //会员id

}

message MemberLoginLogListData {
  int64 id = 1; //
  int64 member_id = 2; //会员id
  string member_ip = 3; //登录ip
  string city = 4; //登录城市
  int32 login_type = 5; //登录类型：0->PC；1->android;2->ios;3->小程序
  string province = 6; //登录省份
  string create_time = 7; //登录时间

}

message QueryMemberLoginLogListResp {
  int64 total = 1;
  repeated  MemberLoginLogListData list = 2;
}

// 会员登录记录
service MemberLoginLogService {
  // 删除会员登录记录
  rpc DeleteMemberLoginLog(DeleteMemberLoginLogReq) returns (DeleteMemberLoginLogResp){}
  // 查询会员登录记录列表
  rpc QueryMemberLoginLogList(QueryMemberLoginLogListReq) returns (QueryMemberLoginLogListResp){}


}
