syntax = "proto3";

package main;

option go_package = "./proto";

// 添加会员统计信息
message AddMemberStatisticsInfoReq {
  int64 id = 1; //
  int64 member_id = 2; //
  int64 consume_amount = 3; //累计消费金额
  int32 order_count = 4; //订单数量
  int32 coupon_count = 5; //优惠券数量
  int32 comment_count = 6; //评价数
  int32 return_order_count = 7; //退货数量
  int32 login_count = 8; //登录次数
  int32 attend_count = 9; //关注数量
  int32 fans_count = 10; //粉丝数量
  int32 collect_product_count = 11; //收藏的商品数量
  int32 collect_subject_count = 12; //收藏的专题活动数量
  int32 collect_topic_count = 13; //收藏的评论数量
  int32 collect_comment_count = 14; //收藏的专题活动数量
  int32 invite_friend_count = 15; //邀请好友数
  string recent_order_time = 16; //最后一次下订单时间

}

message AddMemberStatisticsInfoResp {
  string pong = 1;
}


// 查询会员统计信息详情
message QueryMemberStatisticsInfoDetailReq {
  int64 member_id = 1; //
}

message QueryMemberStatisticsInfoDetailResp {
  int64 id = 1; //
  int64 member_id = 2; //
  int64 consume_amount = 3; //累计消费金额
  int32 order_count = 4; //订单数量
  int32 coupon_count = 5; //优惠券数量
  int32 comment_count = 6; //评价数
  int32 return_order_count = 7; //退货数量
  int32 login_count = 8; //登录次数
  int32 attend_count = 9; //关注数量
  int32 fans_count = 10; //粉丝数量
  int32 collect_product_count = 11; //收藏的商品数量
  int32 collect_subject_count = 12; //收藏的专题活动数量
  int32 collect_topic_count = 13; //收藏的评论数量
  int32 collect_comment_count = 14; //收藏的专题活动数量
  int32 invite_friend_count = 15; //邀请好友数
  string recent_order_time = 16; //最后一次下订单时间

}

// 查询会员统计信息列表
message QueryMemberStatisticsInfoListReq {
  int64 page_num = 1; //第几页
  int64 page_size = 2; //每页的数量

}

message QueryMemberStatisticsInfoListData {
  int64 id = 1; //
  int64 member_id = 2; //
  int64 consume_amount = 3; //累计消费金额
  int32 order_count = 4; //订单数量
  int32 coupon_count = 5; //优惠券数量
  int32 comment_count = 6; //评价数
  int32 return_order_count = 7; //退货数量
  int32 login_count = 8; //登录次数
  int32 attend_count = 9; //关注数量
  int32 fans_count = 10; //粉丝数量
  int32 collect_product_count = 11; //收藏的商品数量
  int32 collect_subject_count = 12; //收藏的专题活动数量
  int32 collect_topic_count = 13; //收藏的评论数量
  int32 collect_comment_count = 14; //收藏的专题活动数量
  int32 invite_friend_count = 15; //邀请好友数
  string recent_order_time = 16; //最后一次下订单时间

}

message QueryMemberStatisticsInfoListResp {
  int64 total = 1;
  repeated  QueryMemberStatisticsInfoListData list = 2;
}
// 会员统计信息
service MemberStatisticsInfoService {
  // 添加会员统计信息
  rpc AddMemberStatisticsInfo(AddMemberStatisticsInfoReq) returns (AddMemberStatisticsInfoResp){}
  // 查询会员统计信息详情
   rpc QueryMemberStatisticsInfoDetail(QueryMemberStatisticsInfoDetailReq) returns (QueryMemberStatisticsInfoDetailResp){}
  // 查询会员统计信息列表
  rpc QueryMemberStatisticsInfoList(QueryMemberStatisticsInfoListReq) returns (QueryMemberStatisticsInfoListResp){}

}
